--- a/_posts/2020-11-18-bins.md
+++ b/_posts/2020-11-18-bins.md
@@ -5,7 +5,7 @@ summary:    A smart container that groups observations around central interval v
 categories: python datasci
 ---
 
-In data science, one often needs to bin continuous data together
+In data science one often needs to bin continuous data together
 to generalise noisy observations.
 Histograms are the prime example of data binning,
 allowing you to quickly identify patterns in data.
@@ -90,7 +90,7 @@ that will hold the contents of `Bins`.
 
 The `__getitem__()` and `__setitem__()` methods
 define the behaviour of using
-the square brackets notation `[]`.
+the square brackets `[]` notation.
 We want to intersect `key` and round it to the closest interval,
 before applying a valid key (an interval) to our internal dictionary.
 
@@ -237,7 +237,8 @@ randomness testing library [coinflip](https://github.com/Honno/coinflip/),
 available in the [`coinflip.collections.Bins`](https://coinflip.readthedocs.io/en/latest/reference/collections.html)
 namespace.
 I believe it's production ready,
-but there possibly quirks I have yet to encounter and test for!
+but possibly there are quirks I have yet to encounter and test for!
+The source code is available on [GitHub](https://github.com/Honno/coinflip/blob/fcbb7fe39ebacfa40df478d5549feff5cecd0e3c/src/coinflip/_randtests/common/collections.py#L17).
 
 A really cool project would be implementing interval ranges,
 so that binning doesn't have to rely on "central values".
