bins post improvements

--- a/_posts/2020-11-18-bins.md
+++ b/_posts/2020-11-18-bins.md
@@ -34,22 +34,23 @@ Each interval is essentially a key paired up with a count,
 where the count starts at 0.
 
 ```python
->>> bins = Bins([0, 1, 2, 3, 4])
+>>> bins = Bins([-6, -3, 0, 3, 6])
 >>> bins
-{0: 0, 1: 0, 2: 0, 3: 0, 4: 0}
+{-6: 0, -3: 0, 0: 0, 3: 0, 6: 0}
 >>> bins[3] += 1                    # n = 3
 >>> bins
-{0: 0, 1: 0, 2: 0, 3: 1, 4: 0}
->>> bins[7] += 1                    # n = 4
->>> bins[11] += 1                   # n = 4
->>> bins[4.5] += 1                  # n = 4
+{-6: 0, -3: 0, 0: 0, 3: 1, 6: 0}
+>>> bins[7] += 1                    # n = 6
+>>> bins[11] += 1                   # n = 6
+>>> bins[6.5] += 1                  # n = 6
 >>> bins
-{0: 0, 1: 0, 2: 0, 3: 1, 4: 3}
->>> bins[-1000000] += 1             # n = 0
+{-6: 0, -3: 0, 0: 0, 3: 1, 6: 3}
+>>> bins[-1000000] += 1             # n = -6
 >>> bins
-{0: 1, 1: 0, 2: 0, 3: 1, 4: 3}
->>> bins[2.25] += 1                 # n = 2 
-{0: 1, 1: 0, 2: 1, 3: 1, 4: 3}
+{-6: 1, -3: 0, 0: 0, 3: 1, 6: 3}
+>>> bins[0.5] += 1                  # n = 0
+>>> bins
+{-6: 1, -3: 0, 0: 1, 3: 1, 6: 3}
 ```
 
 As you can see, this feels an awful lot like a dictionary
@@ -120,7 +121,7 @@ before applying a valid key (an interval) to our internal dictionary.
             leftkey = intervals[i - 1]
             rightkey = intervals[i]
 
-            if leftkey - key > rightkey - key:
+            if abs(leftkey - key) < abs(rightkey - key):
                 return leftkey
             else:
                 return rightkey
@@ -190,41 +191,43 @@ and it will use a [LRU cache](https://en.wikipedia.org/wiki/Cache_replacement_po
 to store the results of frequent function calls
 
 As the act of rounding keys is only interested in the _intervals_ of `Bins`,
-I created a class method (i.e. instance-agnostic)
+I created a util method (i.e. instance-agnostic)
 which takes only the intervals and passed key
 to find the closest interval,
 which is conveniently wrapped by `_roundkey()`.
 
 ```python
+class Bins(MutableMapping):
+    ...
     @property
     def intervals(self):
         return tuple(self._odict.keys())
 
     def _roundkey(self, key):
-        return Bins._find_closest_interval(self.intervals, key)
+        return find_closest_interval(self.intervals, key)
+    ...
 
-    @classmethod
-    @lru_cache()
-    def _find_closest_interval(cls, intervals, key):
-        minkey = intervals[0]
-        midkeys = intervals[1:-1]
-        maxkey = intervals[-1]
+@lru_cache()
+def find_closest_interval(intervals, key):
+    minkey = intervals[0]
+    midkeys = intervals[1:-1]
+    maxkey = intervals[-1]
 
-        if key <= minkey:
-            return minkey
-        elif key >= maxkey:
-            return maxkey
-        elif key in midkeys:
-            return key
+    if key <= minkey:
+        return minkey
+    elif key >= maxkey:
+        return maxkey
+    elif key in midkeys:
+        return key
+    else:
+        i = bisect_left(intervals, key)
+        leftkey = intervals[i - 1]
+        rightkey = intervals[i]
+
+        if abs(leftkey - key) < abs(rightkey - key):
+            return leftkey
         else:
-            i = bisect_left(intervals, key)
-            leftkey = intervals[i - 1]
-            rightkey = intervals[i]
-
-            if leftkey - key > rightkey - key:
-                return leftkey
-            else:
-                return rightkey
+            return rightkey
 ```
 
 ## Fin
@@ -238,15 +241,18 @@ available in the [`coinflip.collections.Bins`](https://coinflip.readthedocs.io/e
 namespace.
 I believe it's production ready,
 but possibly there are quirks I have yet to encounter and test for!
-The source code is available on [GitHub](https://github.com/Honno/coinflip/blob/fcbb7fe39ebacfa40df478d5549feff5cecd0e3c/src/coinflip/_randtests/common/collections.py#L17).
+The source code is available on
+[GitHub](https://github.com/Honno/coinflip/blob/main/src/coinflip/_randtests/common/collections.py#L17)
+([tests](https://github.com/Honno/coinflip/blob/main/tests/collections/test_bins.py) too).
 
-A really cool project would be implementing interval ranges,
+A really cool project would be implementing interval ranges
 so that binning doesn't have to rely on "central values".
 This could be achieved very nicely with [slices](https://docs.python.org/3/library/functions.html#slice)
 (e.g. the `obj[a:b:c]` syntax)
----[pandas](pandas.pydata.org/) is the prime example using slices for
+---this is not unprecedented as [pandas](pandas.pydata.org/) uses slices for
 expressing operations quite nicely.
 
 For any Raymond Hettinger fans out there,
 you'll know that every trick and tool I'm using here
-was heavily influenced by him :D
+was heavily influenced by him.
+Thanks also to redditor ElevenPhonons for giving me some great feedback!
