--- a/_posts/2020-11-18-bins.md
+++ b/_posts/2020-11-18-bins.md
@@ -191,10 +191,10 @@ and it will use a [LRU cache](https://en.wikipedia.org/wiki/Cache_replacement_po
 to store the results of frequent function calls
 
 As the act of rounding keys is only interested in the _intervals_ of `Bins`,
-I created a util method (i.e. instance-agnostic)
+I created a util method (instance-agnostic)
 which takes only the intervals and passed key
 to find the closest interval,
-which is conveniently wrapped by `_roundkey()`.
+and is conveniently wrapped by `_roundkey()`.
 
 ```python
 class Bins(MutableMapping):
