--- a/_posts/2020-11-18-bins.md
+++ b/_posts/2020-11-18-bins.md
@@ -168,13 +168,13 @@ I can't forsee a situation someone would want to do this,
 but `update()` is used in data serialisation and anywho is exposed by `MutableMapping`,
 so it's a good idea to update our internal dictionary's order as well.
 
-Thankfully we have Python's [`OrderedDict`](https://docs.python.org/3/library/collections.html#collections.OrderedDict)
+Thankfully we have the `SortedDict` from the [`sortedcontainers`](http://www.grantjenks.com/docs/sortedcontainers/) package
 which will guantee the dictionary's keys will always be sorted.
 
 ```python
     def __init__(self, intervals):
         empty_bins = {interval: 0 for interval in intervals}
-        self._odict = OrderedDict(empty_bins)
+        self._sdict = SortedDict(empty_bins)
 ```
 
 We can also cache the `_roundkey()` result of frequently passed keys.
@@ -191,43 +191,41 @@ and it will use a [LRU cache](https://en.wikipedia.org/wiki/Cache_replacement_po
 to store the results of frequent function calls
 
 As the act of rounding keys is only interested in the _intervals_ of `Bins`,
-I created a util method (instance-agnostic)
+I created a static method (i.e. instance-agnostic)
 which takes only the intervals and passed key
 to find the closest interval,
 and is conveniently wrapped by `_roundkey()`.
 
 ```python
-class Bins(MutableMapping):
-    ...
     @property
     def intervals(self):
-        return tuple(self._odict.keys())
+        return tuple(self._sdict.keys())
 
     def _roundkey(self, key):
-        return find_closest_interval(self.intervals, key)
-    ...
+        return Bins._find_closest_interval(self.intervals, key)
 
-@lru_cache()
-def find_closest_interval(intervals, key):
-    minkey = intervals[0]
-    midkeys = intervals[1:-1]
-    maxkey = intervals[-1]
+    @staticmethod
+    @lru_cache()
+    def _find_closest_interval(intervals, key):
+        minkey = intervals[0]
+        midkeys = intervals[1:-1]
+        maxkey = intervals[-1]
 
-    if key <= minkey:
-        return minkey
-    elif key >= maxkey:
-        return maxkey
-    elif key in midkeys:
-        return key
-    else:
-        i = bisect_left(intervals, key)
-        leftkey = intervals[i - 1]
-        rightkey = intervals[i]
-
-        if abs(leftkey - key) < abs(rightkey - key):
-            return leftkey
+        if key <= minkey:
+            return minkey
+        elif key >= maxkey:
+            return maxkey
+        elif key in midkeys:
+            return key
         else:
-            return rightkey
+            i = bisect_left(intervals, key)
+            leftkey = intervals[i - 1]
+            rightkey = intervals[i]
+
+            if abs(leftkey - key) < abs(rightkey - key):
+                return leftkey
+            else:
+                return rightkey
 ```
 
 ## Fin
