remove category stuff, redirect old bins article link

--- a/_posts/2020-11-18-bins.md
+++ b/_posts/2020-11-18-bins.md
@@ -2,7 +2,8 @@
 layout:     post
 title:      Simplify data binning with a custom dict
 summary:    A smart container that groups observations around central interval values.
-categories: python datasci
+redirect_from:
+  - /python/datasci/2020/11/18/bins/
 ---
 
 In data science one often needs to bin continuous data together
